main is a jumping off point

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [project]
-name = "literature-companion"
+name = "virtual-literature-companion"
 version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
