--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,7 @@ description = "Advanced PDF book processing and analysis system with AI-powered 
 readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
+    "anthropic>=0.57.1",
     "beautifulsoup4>=4.13.4",
     "chromadb>=1.0.15",
     "click>=8.2.1",
@@ -14,8 +15,10 @@ dependencies = [
     "pillow>=11.3.0",
     "pymupdf>=1.24.14",
     "pytesseract>=0.3.13",
+    "python-dotenv>=1.1.1",
     "requests>=2.32.4",
     "sentence-transformers>=5.0.0",
+    "streamlit>=1.46.1",
 ]
 
 [project.scripts]
