--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,8 @@ dependencies = [
     "requests>=2.32.4",
     "sentence-transformers>=5.0.0",
     "streamlit>=1.46.1",
+    "torch>=2.7.1",
+    "transformers>=4.53.1",
 ]
 
 [project.scripts]
